fixoverflow

--- a/tedxtmu_test/sass/screen.sass
+++ b/tedxtmu_test/sass/screen.sass
@@ -549,6 +549,8 @@ footer
 
 
 @media only screen and (max-width: 40em)
+	body
+		overflow-x: hidden
 	.hero
 		+bg-img(cover, right bottom, url(../images/cloud.jpg))
 		box-shadow: 1px 2px 3px rgba(82,82,82,0.7)
